tests/fixtures/invalid/str_bitxor_none.py
# Cannot bitwise XOR Str and None
x: str = "hello" ^ None
